out
test.cpp: In member function ‘void SparceTable<S, op, e>::set(int, S)’:
test.cpp:373:21: error: no match for ‘operator[]’ (operand types are ‘std::__debug::unordered_map<long long int, int>’ and ‘<brace-enclosed initializer list>’)
  373 |         int ai= span[{i,i+1}];
      |                     ^
In file included from /usr/include/c++/12/unordered_map:47,
                 from /usr/include/c++/12/functional:61,
                 from stdc++.h:71:
/usr/include/c++/12/bits/unordered_map.h:983:7: note: candidate: ‘std::__cxx1998::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::mapped_type& std::__cxx1998::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::operator[](key_type&&) [with _Key = long long int; _Tp = int; _Hash = std::hash<long long int>; _Pred = std::equal_to<long long int>; _Alloc = std::allocator<std::pair<const long long int, int> >; mapped_type = int; key_type = long long int]’
  983 |       operator[](key_type&& __k)
      |       ^~~~~~~~
/usr/include/c++/12/bits/unordered_map.h:983:29: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::__cxx1998::unordered_map<long long int, int, std::hash<long long int>, std::equal_to<long long int>, std::allocator<std::pair<const long long int, int> > >::key_type&&’ {aka ‘long long int&&’}
  983 |       operator[](key_type&& __k)
      |                  ~~~~~~~~~~~^~~
/usr/include/c++/12/bits/unordered_map.h:979:7: note: candidate: ‘std::__cxx1998::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::mapped_type& std::__cxx1998::unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>::operator[](const key_type&) [with _Key = long long int; _Tp = int; _Hash = std::hash<long long int>; _Pred = std::equal_to<long long int>; _Alloc = std::allocator<std::pair<const long long int, int> >; mapped_type = int; key_type = long long int]’
  979 |       operator[](const key_type& __k)
      |       ^~~~~~~~
/usr/include/c++/12/bits/unordered_map.h:979:34: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::__cxx1998::unordered_map<long long int, int, std::hash<long long int>, std::equal_to<long long int>, std::allocator<std::pair<const long long int, int> > >::key_type&’ {aka ‘const long long int&’}
  979 |       operator[](const key_type& __k)
      |                  ~~~~~~~~~~~~~~~~^~~
